Add configuration files for PgAdmin and RustFS Storage

--- a/nginx.conf
+++ b/nginx.conf
@@ -67,6 +67,12 @@ http {
     # PHPMyAdmin Dev
     include /etc/nginx/conf.d/phpmyadmindev.conf;
 
+    # Pgadmin
+    include /etc/nginx/conf.d/pgadmin.conf;
+
+    # RustFS Storage
+    include /etc/nginx/conf.d/storage.conf;
+
     # Test 1
     # include /etc/nginx/conf.d/test1.conf;
     
