Add MailCrab configuration to NGINX

--- a/nginx.conf
+++ b/nginx.conf
@@ -73,6 +73,9 @@ http {
     # RustFS Storage
     include /etc/nginx/conf.d/storage.conf;
 
+    # MailCrab
+    include /etc/nginx/conf.d/mailcrab.conf;
+
     # Test 1
     # include /etc/nginx/conf.d/test1.conf;
     
